Fix SVG size on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -74,6 +74,7 @@ kbd {
 
 .step-diagram svg {
   height: 100%;
+  max-height: inherit;
 }
 
 .svg-outline,
